--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Alexandr Loktysh CV</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
+    
   </head>
   <body>
     <div>
-        <h1>There is my CV</h1>
+        <header><h1>There is my CV</h1></header>
         <img class="avatar" src="images/avatar.jpg" alt="It's me!" width="180">
-        <p>Several things about me</p>
+        <h2>Several things about me</h2>
         <ul> 
             <li>Name: Alexander Loktysh</li>
             <li>About me: I want to pay bills.</li>
@@ -20,7 +21,18 @@
             <li>Education: BNTU engideering specialists.</li>
             <li>English language: non.</li>
         </ul>
-        <p>My contact <a href="https://t.me/Euphorialick">via Telegram</a>.</p>
+        <aside>
+            <details>
+                <summary>Code examples</summary>
+                <a href="https://github.com/Loktysh">Github</a>
+            </details>
+        </aside>
+        <footer>
+            <section><h3>My contact</h3><ul>
+                <li><a href="https://t.me/Euphorialick">via Telegram</a></li>
+            </ul></section>
+        </footer>
     </div>
+    <script>alert('Пожалуйста, если у вас возникнут вопросы, то свяжитесь со мной по ссылке ниже, а ещё лучше также в rsapp сделайте вам видимым при оценке, спасибо.')</script>
   </body>
 </html>
