--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
         <ul> 
             <li>Name: Alexander Loktysh</li>
             <li>About me: I want to pay bills.</li>
-            <li>It skills: none.</li>
+            <li>It skills:
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+              </ul>
+            </li>
             <li>Work experience: engineering design.</li>
             <li>Education: BNTU engideering specialists.</li>
-            <li>English language: non.</li>
+            <li>English language: A-level</li>
         </ul>
         <aside>
             <details>
@@ -33,6 +39,6 @@
             </ul></section>
         </footer>
     </div>
-    <script>alert('Пожалуйста, если у вас возникнут вопросы, то свяжитесь со мной по ссылке ниже, а ещё лучше также в rsapp сделайте вам видимым при оценке, спасибо.')</script>
+    <script>alert('Пожалуйста, если у вас возникнут вопросы, то свяжитесь со мной по ссылке ниже, а ещё лучше также в rsapp сделайте вам видимым при оценке, спасибо!')</script>
   </body>
 </html>
