feat: new tab project links opening

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
       <div class="projects col-sm" id="projects">
         <h3>My pet-projects:</h3>
         <p> Wildlife site</p>
-        <a href="https://rolling-scopes-school.github.io/loktysh-JSFE2021Q1/wildlife/"><img
+        <a href="https://rolling-scopes-school.github.io/loktysh-JSFE2021Q1/wildlife/" target="_blank"><img
             src="https://media.istockphoto.com/photos/fox-in-the-meadow-picture-id485364370?b=1&k=20&m=485364370&s=170667a&w=0&h=lTBM3-Fi_Z2mKRkIUcxGRmn8FSol6GXCgFDd25AQq2c="
             alt="Wildlife"></a>
         <p>Piano</p>
-        <a href="https://rolling-scopes-school.github.io/loktysh-JSFE2021Q1/virtual-piano"><img
+        <a href="https://rolling-scopes-school.github.io/loktysh-JSFE2021Q1/virtual-piano" target="_blank"><img
             src="https://image.freepik.com/free-photo/close-up-of-piano-keys_1232-1774.jpg" alt="Piano"></a>
         <p>Online photo filter</p>
-        <a href="https://rolling-scopes-school.github.io/loktysh-JSFE2021Q1/photo-filter/"><img
+        <a href="https://rolling-scopes-school.github.io/loktysh-JSFE2021Q1/photo-filter/" target="_blank"><img
             src="https://imgv3.fotor.com/images/videoImage/Online-photo-editor.png" alt=""></a>
       </div>
       <aside class="col-xl-5" id="code">
